# well-log-ai

Well-Log-Analyzer/: CMakeLists.txt  well_log.csv  well_log_analyzer  well_log_data.csv
Well-Log-Analyzer/include/: ai_integration.h  well_log.h
Well-Log-Analyzer/src/: ai_integration.cpp  main.cpp  well_log.cpp
